# MCUCMake

./: .gitignore  CMakeLists.txt  CMakePresets.json  MCUCMake.syscfg  README.md
Application/: main.c
Hardware/Utils/: Interrupt.c  Interrupt.h  Utils.c
cmake/: gcc-arm-none-eabi.cmake
cmake/MSPM0G3507/: CMakeLists.txt
